tests/specs/check/check_ignore/no_ignore.out
TS2322 [ERROR]: Type 'string' is not assignable to type 'number'.
const x: number = "not a number";
      ~
    at [WILDCARD]

error: Type checking failed.
